Added mesh simplificator UI

--- a/SSWEProject/DefaultAudioManager/DefaultAudioManager.vcxproj
+++ b/SSWEProject/DefaultAudioManager/DefaultAudioManager.vcxproj
@@ -59,6 +59,7 @@
       <PreprocessorDefinitions>WIN32;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <AdditionalIncludeDirectories>$(SolutionDir)Irrlicht/Irrlicht180/include;$(SolutionDir)SSWELib/include;$(SolutionDir)AudioEngine/fmod/inc</AdditionalIncludeDirectories>
+      <RuntimeTypeInfo>true</RuntimeTypeInfo>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -77,6 +78,7 @@ copy "$(OutDir)$(TargetName)$(TargetExt)" "$(SolutionDir)SSWETests\Output\$(Targ
       <PreprocessorDefinitions>WIN32;NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <AdditionalIncludeDirectories>$(SolutionDir)Irrlicht/Irrlicht180/include;$(SolutionDir)SSWELib/include;$(SolutionDir)AudioEngine/fmod/inc</AdditionalIncludeDirectories>
+      <RuntimeTypeInfo>true</RuntimeTypeInfo>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
