--- a/SSWEProject/SSWEUltimateTool/SSWEUltimateTool.vcxproj
+++ b/SSWEProject/SSWEUltimateTool/SSWEUltimateTool.vcxproj
@@ -102,6 +102,7 @@ copy "$(OutDir)$(TargetName)$(TargetExt)" "$(SolutionDir)SSWETests\Output\$(Targ
     <ClInclude Include="SSWEUltimateTool\UserInterfaces\OpenSCAD\CSSWEUTOpenSCADDocument.h" />
     <ClInclude Include="SSWEUltimateTool\UserInterfaces\SoundViewer\CGUISpectrum.h" />
     <ClInclude Include="SSWEUltimateTool\UserInterfaces\SoundViewer\CSSWEUTSoundViewer.h" />
+    <ClInclude Include="SSWEUltimateTool\Utils\CSSWEUTMeshSplitter.h" />
     <ClInclude Include="Stdafx.h" />
   </ItemGroup>
   <ItemGroup>
@@ -109,6 +110,7 @@ copy "$(OutDir)$(TargetName)$(TargetExt)" "$(SolutionDir)SSWETests\Output\$(Targ
     <ClCompile Include="SSWEUltimateTool\UserInterfaces\OpenSCAD\CSSWEUTOpenSCADDocument.cpp" />
     <ClCompile Include="SSWEUltimateTool\UserInterfaces\SoundViewer\CGUISpectrum.cpp" />
     <ClCompile Include="SSWEUltimateTool\UserInterfaces\SoundViewer\CSSWEUTSoundViewer.cpp" />
+    <ClCompile Include="SSWEUltimateTool\Utils\CSSWEUTMeshSplitter.cpp" />
     <ClCompile Include="Stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
