--- a/SSWEProject/SSWEUltimateTool/SSWEUltimateTool.vcxproj
+++ b/SSWEProject/SSWEUltimateTool/SSWEUltimateTool.vcxproj
@@ -87,7 +87,7 @@ copy "$(OutDir)$(TargetName)$(TargetExt)" "$(SolutionDir)SSWETests\Output\$(Targ
     </ClCompile>
     <Link>
       <GenerateDebugInformation>false</GenerateDebugInformation>
-      <AdditionalDependencies>Irrlicht_f.lib;SSWECore_f.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>Irrlicht.lib;SSWECore.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(SolutionDir)Irrlicht/Irrlicht180/Output;$(SolutionDir)SSWECore/Output;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
