--- a/SSWEProject/SSWELib/SSWELib.vcxproj
+++ b/SSWEProject/SSWELib/SSWELib.vcxproj
@@ -246,6 +246,7 @@ copy "$(OutDir)$(TargetName)$(TargetExt)" "$(SolutionDir)SSWETests\Output\$(Targ
     <ClCompile Include="SSWELib\Device\Core\Scripting\CUIScriptEditor.cpp" />
     <ClCompile Include="SSWELib\Device\Core\Scripting\math\CMatrix4.cpp" />
     <ClCompile Include="SSWELib\Device\Core\Scripting\math\CVector3d.cpp" />
+    <ClCompile Include="SSWELib\Device\Core\Scripting\Scene\CCamera.cpp" />
     <ClCompile Include="SSWELib\Device\Monitor\MonitorRegister.cpp" />
     <ClCompile Include="SSWELib\GUIExtension\CodeEditor\CGUICodeEditor.cpp" />
     <ClCompile Include="SSWELib\GUIExtension\FileLoader\CUIFileLoader.cpp" />
@@ -396,6 +397,7 @@ copy "$(OutDir)$(TargetName)$(TargetExt)" "$(SolutionDir)SSWETests\Output\$(Targ
     <ClInclude Include="SSWELib\Device\Core\Scripting\CUIScriptEditor.h" />
     <ClInclude Include="SSWELib\Device\Core\Scripting\math\CMatrix4.h" />
     <ClInclude Include="SSWELib\Device\Core\Scripting\math\CVector3d.h" />
+    <ClInclude Include="SSWELib\Device\Core\Scripting\Scene\CCamera.h" />
     <ClInclude Include="SSWELib\Device\Monitor\MonitorRegister.h" />
     <ClInclude Include="SSWELib\GUIExtension\CodeEditor\CGUICodeEditor.h" />
     <ClInclude Include="SSWELib\GUIExtension\FileLoader\CUIFileLoader.h" />
