fixed HDR pipeline on OpenGL (linux) driver, have to get floating values instead of RGB8 conversion

--- a/SSWEProject/SSWE/SSWE/SSWE.cbp
+++ b/SSWEProject/SSWE/SSWE/SSWE.cbp
@@ -19,6 +19,7 @@
 					<Add option="-W" />
 					<Add option="-O0" />
 					<Add option="-Wno-unused-parameter" />
+					<Add option="-fPIC" />
 					<Add option="-DSSWE_EDITOR" />
 				</Compiler>
 			</Target>
