--- a/SSWEProject/SSWEGenericMonitor/SSWEGenericMonitor/SSWEGenericMonitor.cbp
+++ b/SSWEProject/SSWEGenericMonitor/SSWEGenericMonitor/SSWEGenericMonitor.cbp
@@ -7,18 +7,27 @@
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/libSSWEGenericMonitor" prefix_auto="1" extension_auto="1" />
+				<Option output="../../../SSWE/Plugins/Monitors/LIBSSWEGENERICMONITOR" prefix_auto="0" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="3" />
 				<Option compiler="gcc" />
 				<Option createDefFile="1" />
 				<Option createStaticLib="1" />
 				<Compiler>
+					<Add option="-std=c++11" />
 					<Add option="-g" />
+					<Add option="-fexceptions" />
+					<Add option="-W" />
+					<Add option="-O0" />
+					<Add option="-Wno-unused-parameter" />
+					<Add option="-fno-exceptions" />
+					<Add option="-fPIC" />
+					<Add directory="../../../../irrlicht-1.8.1/include" />
+					<Add directory="../../SSWELib/include" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/libSSWEGenericMonitor" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/SSWEGenericMonitor" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="3" />
 				<Option compiler="gcc" />
@@ -26,6 +35,14 @@
 				<Option createStaticLib="1" />
 				<Compiler>
 					<Add option="-O2" />
+					<Add option="-fexceptions" />
+					<Add option="-W" />
+					<Add option="-O0" />
+					<Add option="-Wno-unused-parameter" />
+					<Add option="-fno-exceptions" />
+					<Add option="-fPIC" />
+					<Add directory="../../../../irrlicht-1.8.1/include" />
+					<Add directory="../../SSWELib/include" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -33,10 +50,21 @@
 			</Target>
 		</Build>
 		<Compiler>
+			<Add option="-std=c++11" />
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
+			<Add option="-W" />
+			<Add option="-O0" />
+			<Add option="-Wno-unused-parameter" />
+			<Add option="-fno-exceptions" />
+			<Add option="-fPIC" />
 		</Compiler>
-		<Unit filename="main.cpp" />
+		<Unit filename="../CGenericMonitor.cpp" />
+		<Unit filename="../CGenericMonitor.h" />
+		<Unit filename="../Resource.h" />
+		<Unit filename="../stdafx.cpp" />
+		<Unit filename="../stdafx.h" />
+		<Unit filename="../targetver.h" />
 		<Extensions>
 			<code_completion />
 			<debugger />
